--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ ConstantTime = "adc38e39-84cc-4087-89ab-f4eae76b2d15"
 [compat]
 DarkIntegers = "~0.1.2"
 julia = "^1.0.0"
+ConstantTime = "~0.1.1"
 
 [extras]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
