--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "0.1.0"
 
 [deps]
 DarkIntegers = "95d18f7b-8dde-4426-a3cb-b3b9e7df9890"
+DarkCurves = "eb74ef6d-f479-4c54-be43-bc7ae9988d2f"
 ConstantTime = "adc38e39-84cc-4087-89ab-f4eae76b2d15"
 
 [compat]
