--- a/Project.toml
+++ b/Project.toml
@@ -7,16 +7,16 @@ version = "0.1.0"
 DarkIntegers = "95d18f7b-8dde-4426-a3cb-b3b9e7df9890"
 DarkCurves = "eb74ef6d-f479-4c54-be43-bc7ae9988d2f"
 ConstantTime = "adc38e39-84cc-4087-89ab-f4eae76b2d15"
+Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 
 [compat]
-DarkIntegers = "~0.1.2"
+DarkIntegers = "~0.1.3"
 julia = "^1.0.0"
 ConstantTime = "~0.1.1"
 
 [extras]
 BenchmarkTools = "6e4b80f9-dd63-53aa-95a3-0cdb28fa8baf"
 Jute = "82bedeac-9837-5b62-883a-b5b3b7c811c5"
-Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 
 [targets]
-test = ["Jute", "BenchmarkTools", "Random"]
+test = ["Jute", "BenchmarkTools"]
